# pyrogram-async-redis-storage

./: .codespell-whitelist.txt  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: pr_dependency-review.yaml  pr_tests.yaml  pr_update-linting.yaml  publish_coverage.yaml  release_pypi.yaml
pyrogram_async_redis_storage/: __about__.py  __init__.py  accessor.py  redis_async_storage.py  schemas.py
scripts/: static-analysis.sh  test-cov.sh
tests/: test_accessor.py  test_schemas.py
